fix details and summary on IE and FF

--- a/demo-ui/public/stylesheets/ons.css
+++ b/demo-ui/public/stylesheets/ons.css
@@ -897,6 +897,15 @@ details details div{
     text-indent: 53px;
 }
 
+details.details_shim_closed,
+details.details_shim_open {display: block;}
+details.details_shim_closed > * {display: none;}
+details.details_shim_closed > summary,
+details.details_shim_open   > summary {display: block;}
+details.details_shim_closed > summary:before {display: inline-block; content: "\25ba"; padding: 0 0.1em; margin-right: 0.4em; font-size: 0.9em;}
+details.details_shim_open   > summary:before {display: inline-block; content: "\25bc"; padding: 0; margin-right: 0.35em;}
+
+
 #multi-match-results{
     padding-left: 10px
 }
